tests/ui/failing/test-panic-while-printing.rs.stderr
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/stable_mir_json -Zno-codegen /home/zncv/Applications/mir-semantics-compiletest/ui/test-attrs/test-panic-while-printing.rs`
error[E0601]: `main` function not found in crate `test_panic_while_printing`
  --> /home/zncv/Applications/mir-semantics-compiletest/ui/test-attrs/test-panic-while-printing.rs:24:2
   |
24 | }
   |  ^ consider adding a `main` function to `/home/zncv/Applications/mir-semantics-compiletest/ui/test-attrs/test-panic-while-printing.rs`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0601`.
